--- a/src/main/resources/templates/todolist.html
+++ b/src/main/resources/templates/todolist.html
@@ -11,36 +11,66 @@
 <body>
   <div class="container">
     <div class="mt-5">
-      <!-- Button trigger modal -->
-      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      <!-- Button trigger modal add -->
+      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addTodoList">
         Tambah Todo List
       </button>
-      <h2>Todo List</h2>
-      <table class="table table-striped">
+      <h2 class="mt-3">Todo List</h2>
+      <table class="table table-striped mt-3">
         <tr>
           <th>Id</th>
           <th>Todo</th>
+          <th>Action</th>
         </tr>
-        <tr th:each="list : ${todos}">
+        <tr th:each="list, rowStat : ${todos}">
           <td th:text="${list.id}">Id</td>
           <td th:text="${list.todo}">Todo</td>
+          <td>
+            <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+              th:data-bs-target="'#deleteTodoList' + ${rowStat.index}">
+              Hapus
+            </button>
+            <!-- Modal delete -->
+            <div class="modal fade" th:id="'deleteTodoList' + ${rowStat.index}" tabindex="-1"
+              aria-labelledby="deleteTodoListLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="deleteTodoListLabel">Delete Todo's</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <h4>Anda yakin ingin menghapus todo list ini?</h4>
+                    <form class="form-horizontal" th:action="@{/list/delete}" id="deleteForm" method="post">
+                      <input type="hidden" name="id" th:value="${list.id}" />
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                  </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </td>
         </tr>
       </table>
     </div>
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+    <!-- Modal add -->
+    <div class="modal fade" id="addTodoList" tabindex="-1" aria-labelledby="addTodoListLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Tambah TodoList</h1>
+            <h1 class="modal-title fs-5" id="addTodoListLabel">Tambah TodoList</h1>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
             <form class="form-horizontal" th:object="${todoRequest}" th:action="@{/list}" method="post">
               <input type="hidden" th:field="*{id}" />
               <div class="form-group">
-                <label class="col-sm-2 control-label">Nama Todo</label>
-                <div class="col-sm-10">
+                <label class="col-sm-6 col-lg-12 control-label fw-medium">Nama Todo</label>
+                <div class="col-sm-12 mt-1">
                   <input type="text" class="form-control" th:field="*{todo}" placeholder="Nama Todo" />
                 </div>
               </div>
@@ -53,10 +83,10 @@
         </div>
       </div>
     </div>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
