--- a/src/main/resources/templates/todolist.html
+++ b/src/main/resources/templates/todolist.html
@@ -58,8 +58,8 @@
     </div>
 
     <!-- Modal add -->
-    <div class="modal fade" id="addTodoList" tabindex="-1" aria-labelledby="addTodoListLabel" aria-hidden="true">
-      <div class="modal-dialog">
+    <div class="modal m-auto fade" id="addTodoList" tabindex="-1" aria-labelledby="addTodoListLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
             <h1 class="modal-title fs-5" id="addTodoListLabel">Tambah TodoList</h1>
