--- a/src/main/resources/templates/todolist.html
+++ b/src/main/resources/templates/todolist.html
@@ -6,16 +6,26 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" media="screen" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="container">
-    <div class="mt-5">
+    <div class=" ">
+      <!-- <button class="btn-23"> -->
+        <!-- <span class="text">Add To Do List</span>
+        <span aria-hidden="" class="marquee"> To Do</span>
+      </button> -->
+      
       <!-- Button trigger modal add -->
       <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addTodoList">
         Tambah Todo List
       </button>
-      <h2 class="mt-3">Todo List</h2>
+
+      <h2 class="mt-3">To Do List</h2>
+      <!-- <h2 class="mt-3">やることリスト</h2> -->
       <table class="table table-striped mt-3">
         <tr>
           <th>Id</th>
@@ -56,6 +66,8 @@
         </tr>
       </table>
     </div>
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,32L15,37.3C30,43,60,53,90,90.7C120,128,150,192,180,218.7C210,245,240,235,270,208C300,181,330,139,360,138.7C390,139,420,181,450,176C480,171,510,117,540,117.3C570,117,600,171,630,176C660,181,690,139,720,128C750,117,780,139,810,144C840,149,870,139,900,128C930,117,960,107,990,133.3C1020,160,1050,224,1080,256C1110,288,1140,288,1170,272C1200,256,1230,224,1260,181.3C1290,139,1320,85,1350,80C1380,75,1410,117,1425,138.7L1440,160L1440,320L1425,320C1410,320,1380,320,1350,320C1320,320,1290,320,1260,320C1230,320,1200,320,1170,320C1140,320,1110,320,1080,320C1050,320,1020,320,990,320C960,320,930,320,900,320C870,320,840,320,810,320C780,320,750,320,720,320C690,320,660,320,630,320C600,320,570,320,540,320C510,320,480,320,450,320C420,320,390,320,360,320C330,320,300,320,270,320C240,320,210,320,180,320C150,320,120,320,90,320C60,320,30,320,15,320L0,320Z"></path></svg>
 
     <!-- Modal add -->
     <div class="modal fade" id="addTodoList" tabindex="-1" aria-labelledby="addTodoListLabel" aria-hidden="true">
